# VinylVault

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  ideas.md  llms.txt  package-lock.json  package.json  pnpm-lock.yaml  qodana.yaml  v0-prompt.md
.github/: actionlint.yml  dependabot.yml
.husky/: pre-push
api/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
desktop/: package.json  pnpm-lock.yaml
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  cache.rs  http_client.rs  lib.rs  ocr_macos.rs  updater.rs  vram.rs
desktop/src-tauri/src/commands/: auto_tag.rs  discogs.rs  keyring.rs  llm.rs  mod.rs  recognize.rs  settings.rs  spotify.rs
docker/: builder.Dockerfile
docs/: architecture.md  oidc-providers.md  project-architecture.md  vinyl-catalog-traefik.yml
recognizer/: .env.example  app.py  main.py  requirements.txt
scripts/: bump-version.sh  release.sh  sr-bump-version.sh
vinyl-catalog/: .gitignore  docker-compose.yml  electron-builder.config.ts  electron-vite.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
vinylRecognizerDashboard/: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  jest.config.js  middleware.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
web/: .dockerignore  .env.example  .gitignore  (+8 more)
(+287 files in other folders)
